--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -3,8 +3,7 @@
   "description": "AAA bb",
   "version": "1.0",
   "browser_action": {
-    "default_popup": "hello.html",
-    "default_icon": "hello_extensions.png"
+    "default_popup": "hello.html"
   },
   "manifest_version": 2,
   "permissions": [
