--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -12,6 +12,7 @@
     "http://bb.kai.ru/*",
     "file:///*/*"
   ],
+  "content_security_policy": "unsafe-inline",
   "content_scripts": [
     {
       "matches": [
