--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -16,7 +16,7 @@
       "matches": [
         "file:///C:/Users/*"
       ],
-      "js": [ "script1.js" ],
+      "js": [ "contextscript.js" ],
       "run_at": "document_end"
     }
   ]
